--- a/news/templates/navbar.html
+++ b/news/templates/navbar.html
@@ -10,6 +10,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="{% url 'newsToday' %}">The Moringa Tribune</a>
+        <a href="{% url 'adminPage' %}"></a>
       </div>
   
       <!-- Adding a search form  -->
